# -Magic_box

./: CMakeLists.txt  CMakeLists.txt.user.0389ab2  CMakeLists.txt.user.d4b84b7  LICENSE  Logic.cpp  Logic.h  README.md  SwitchWindow.cpp  SwitchWindow.h  WaitWidge.cpp  WaitWidge.h  box_numbers.txt  crew_member_list.txt  dialog_failtrue.cpp  dialog_failtrue.h  dialog_failtrue.ui  dialog_re.cpp  dialog_re.h  dialog_re.ui  dialog_re2.cpp  dialog_re2.h  dialog_re2.ui  dialog_signform.cpp  dialog_signform.h  dialog_signform.ui  doc.qrc  draw.cpp  draw.h  draw.ui  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.ui  pic.qrc  re.cpp  (+9 more)
